# mankey

./: Makefile  pyproject.toml
mankey/: main.py
mankey/data/: master.py
mankey/data/personal_data/: data.csv
mankey/menu/: __init__.py  index_menu.py  new_password.py  search_password.py
mankey/utils/: crypto.py  sync_data.py
