[tool.poetry]
name = "mankey"
version = "0.0.1"
description = "Password Manager CLI"
authors = ["gbPagano <guilhermebpagano@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.5.1"
click = "^8.1.3"
SQLAlchemy = "^1.4.39"
cryptography = "^37.0.4"
argon2-cffi = "^21.3.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pydocstyle = "^6.1.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mankey = "src.main:main"